--- a/src/layout/Content/Content.scss
+++ b/src/layout/Content/Content.scss
@@ -1,6 +1,4 @@
 .content {
-    width: 100vw;
-    height: 100%;
-    min-height: 80vh;
-    background-color: antiquewhite;
+    position: relative;
+    flex-grow: 1;
 }
