feat: create info timeline component & edit footer layout

--- a/src/component/PageTitle/PageTitle.scss
+++ b/src/component/PageTitle/PageTitle.scss
@@ -1,11 +1,11 @@
-.resume-page {
+.page-title {
     position: relative;
-    // background-color: #282c34;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: start;
-    font-size: calc(10px + 2vmin);
+    font-size: calc(18px + 2vmin);
     font-weight: bold;
     color: #282c34;
 }
