--- a/src/layout/Footer/Footer.scss
+++ b/src/layout/Footer/Footer.scss
@@ -1,22 +1,29 @@
 footer {
     width: 100vw;
+}
+
+.footer {
+    width: 100%;
     min-height: 10vh;
     max-height: 150px;
-    background-color: #FBFCFC;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    
 
-    .footer {
+    .footer-line {
         position: relative;
         // top: 0;
-        width: 90vw;
+        // width: 90vw;
+        width: 100%;
         color: #ABB2B9;
         border-style: solid;
         border-bottom: 10px black;
     }
-    .footer-font {
+    .footer-side {
+        // background-color: #FBFCFC;
         color: #ABB2B9;
     }
 }
