--- a/src/component/SkillGroup/SkillGroup.scss
+++ b/src/component/SkillGroup/SkillGroup.scss
@@ -43,13 +43,18 @@
                     display: flex;
                     flex-direction: row;
                     justify-content: space-evenly;
-                    align-items: start;
+                    align-items: center;
                     font-size: calc(10px + 1vmin);
                     color: #4D5656;
+                    // background-color: antiquewhite;
 
                     .item-name {
                         font-size: calc(10px + 1vmin);
                         font-weight: bold;
+                    }
+
+                    .item-rate {
+                        font-size: calc(8px + 1vmin);
                     }
                 }
     
