--- a/src/component/PageTitle/PageTitle.scss
+++ b/src/component/PageTitle/PageTitle.scss
@@ -3,8 +3,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: start;
+    align-items: flex-start;
+    justify-content: flex-start;
     font-size: calc(18px + 2vmin);
     font-weight: bold;
     color: #282c34;
