--- a/src/component/ProjectItem/ProjectItem.scss
+++ b/src/component/ProjectItem/ProjectItem.scss
@@ -20,7 +20,7 @@ $lineColor: #BDC3C7;
         position: relative;
         /* display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         justify-content: space-around; */
         margin: 20px 0 10px 0;
 
@@ -29,7 +29,7 @@ $lineColor: #BDC3C7;
             position: relative;
             padding: 0 0 40px 0;
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
             flex-wrap: wrap;
         }
 
@@ -77,7 +77,7 @@ $lineColor: #BDC3C7;
             padding-right: 30px;
             display: flex;
             flex-direction: column;
-            align-items: start;
+            align-items: flex-start;
             justify-content: space-between;
 
             font-size: calc(8px + 1vmin);
@@ -103,7 +103,7 @@ $lineColor: #BDC3C7;
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
-                    align-items: start;
+                    align-items: flex-start;
                     flex-wrap: wrap;
                     .role {
                         margin-right: 20px;
