--- a/src/component/SkillGroup/SkillGroup.scss
+++ b/src/component/SkillGroup/SkillGroup.scss
@@ -31,7 +31,7 @@
                 position: relative;
                 padding: 0 40px 40px 0;
                 display: flex;
-                justify-content: end;
+                justify-content: flex-end;
                 flex-wrap: wrap;
             }
 
