--- a/src/pages/Main/MainPage.scss
+++ b/src/pages/Main/MainPage.scss
@@ -20,7 +20,7 @@
         position: relative;
         height: 100%;
         display: flex;
-        align-items: start;
+        align-items: flex-start;
         // justify-content: center;
         justify-content: space-evenly;
         flex-direction: column;
