[feat] InfoTimeline 增加subtitle

--- a/src/component/InfoTimeline/InfoTimeline.scss
+++ b/src/component/InfoTimeline/InfoTimeline.scss
@@ -9,6 +9,12 @@ $projectColor: #BDC3C7;
         font-weight: bold;
         color: #424949;
         font-size: calc(14px + 2vmin);
+
+        .subTitle {
+            padding: 15px;
+            padding-right: 30px;
+            font-size: calc(8px + 2vmin);
+        }
     }
 
 
